# cap-srp

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
cap_srp/: __init__.py  cli.py
cap_srp/core/: __init__.py  events.py  logger.py  merkle.py  signer.py  verifier.py
cap_srp/dashboard/: __init__.py  app.py
cap_srp/utils/: __init__.py  helpers.py
docs/: API.md  ARCHITECTURE.md  REGULATORY_MAPPING.md
examples/: demo_generate_events.py  demo_verify_completeness.py
schemas/: README.md  event.json  gen-attempt.json  gen-deny.json  gen-error.json  gen-success.json
tests/: __init__.py  test_events.py  test_logger.py  test_merkle.py  test_schema.py  test_verifier.py
